--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,11 +1,11 @@
 .nav {
     background: #ef8341;
     width: 100%;
-    height: 80px;
     position: fixed;
     z-index: 10;
     font-family: "Rajdhani", sans-serif;
     top: 0;
+    transition: all 1s;
   }
   
   #sidebarMenu {
@@ -94,27 +94,31 @@
   
   .nav-content {
     display: flex;
+    align-items: center;
+    padding: 13px 0px;
   }
   
   .logo {
-    margin-left: 50px;
-    padding-top: 16px;
+    /* padding-top: px; */
+    /* align-items: center; */
+    /* margin-top: 15px; */
   }
   
   .bpshopsLogo {
     width: 13em;
     cursor: pointer;
+    margin-left: 60px;
+    transition: all 1s;
   }
   
   .bpshopsIcon {
     display: none;
     transition: all 1s;
-    margin-left: 25px;
+    margin-left: 50px;
   }
   
   .searchInput {
     margin: auto;
-    margin-top: 15px;
     position: relative;
   }
   
@@ -130,7 +134,7 @@
     z-index: 100;
     outline: none;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
-    transition: all 0.5s;
+    transition: all 0.3s;
   }
   
   .searchIcon {
@@ -144,17 +148,16 @@
     margin-right: 30px;
     color: #fff;
     font-size: 25px;
+    padding: 11px 0px;
   }
   
   .login h6 {
-    margin-top: 27px;
     cursor: pointer;
   }
   
   .threeDotMenuIcon {
     color: #fff;
     display: none;
-    margin-top: 25px;
     cursor: pointer;
   }
   
@@ -174,7 +177,7 @@
   @media only screen and (max-width: 1200px) {
     .search {
       width: 500px;
-      padding: 14px 20px;
+      padding: 16px 20px;
       margin-left: -180px;
     }
   }
@@ -182,7 +185,7 @@
   @media only screen and (max-width: 1100px) {
     .search {
       width: 450px;
-      padding: 14px 20px;
+      padding: 15px 20px;
       margin-left: -180px;
     }
   }
@@ -190,24 +193,20 @@
   @media only screen and (max-width: 1000px) {
     .search {
       width: 400px;
-      padding: 14px 20px;
+      padding: 15px 20px;
       margin-left: -160px;
     }
   }
-  
-  /* @media only screen and (max-width: 992px) {
-      #search {
-          width: 450px;
-          padding: 12px 20px;
-          margin-left: -150px;
-      }
-  } */
   
   @media only screen and (max-width: 900px) {
     .search {
       width: 370px;
       padding: 14px 20px;
       margin-left: -130px;
+    }
+    .bpshopsLogo {
+      margin-left: 60px;
+      
     }
   }
   
@@ -217,6 +216,11 @@
       padding: 14px 20px;
       margin-left: -100px;
     }
+
+    .bpshopsLogo {
+      margin-left: 60px;
+      
+    }
   }
   
   @media only screen and (max-width: 800px) {
@@ -224,6 +228,10 @@
       width: 320px;
       padding: 14px 20px;
       margin-left: -60px;
+    }
+    .bpshopsLogo {
+      margin-left: 60px;
+      
     }
   }
   
@@ -233,14 +241,18 @@
       padding: 14px 20px;
       margin-left: -30px;
     }
-  
+    .sidebarIconToggle {
+      top: 32px;
+    }
     .bpshopsLogo {
       display: none;
+      
     }
   
     .bpshopsIcon {
       display: block;
       width: 45px;
+      margin-left: 60px;
     }
   
     .login h6 {
@@ -258,7 +270,9 @@
       padding: 14px 20px;
       margin-left: -20px;
     }
-  
+    .sidebarIconToggle {
+      top: 32px;
+    }
     .bpshopsLogo {
       display: none;
     }
@@ -266,6 +280,7 @@
     .bpshopsIcon {
       display: block;
       width: 45px;
+      margin-left: 60px;
     }
   
     .login h6 {
@@ -283,6 +298,10 @@
       padding: 14px 15px;
       margin-left: -10px;
     }
+
+    .sidebarIconToggle {
+      top: 32px;
+    }
   
     .bpshopsLogo {
       display: none;
@@ -291,7 +310,7 @@
     .bpshopsIcon {
       display: block;
       width: 45px;
-      margin-left: 10px;
+      margin-left: 60px;
     }
   
     .login h6 {
