--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -31,7 +31,7 @@
     position: absolute;
     z-index: 20;
     top: 30px;
-    left: 22px;
+    left: 67px;
     cursor: pointer;
   }
   
@@ -117,7 +117,7 @@
   .bpshopsLogo {
     width: 13em;
     cursor: pointer;
-    margin-left: 60px;
+    margin-left: 110px;
     transition: all 1s;
   }
   
@@ -140,7 +140,7 @@
     background: #fff;
     border-radius: 30px;
     padding: 14px 30px;
-    margin-left: -140px;
+    margin-left: -153px;
     z-index: 100;
     outline: none;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
@@ -155,7 +155,7 @@
   }
   
   .login {
-    margin-right: 30px;
+    margin-right: 67px;
     color: #fff;
     font-size: 25px;
     padding: 11px 0px;
@@ -173,6 +173,15 @@
   
   /* responsive css */
   @media only screen and (max-width: 1400px) {
+    .sidebarIconToggle {
+      left: 37px;
+    }
+    .bpshopsLogo {
+      margin-left: 75px;
+    }
+    .login {
+      margin-right: 37px;
+    }
     .search {
       width: 600px;
     }
@@ -181,89 +190,149 @@
   @media only screen and (max-width: 1300px) {
     .search {
       width: 550px;
+      margin-left: 10px;
+    }
+    .bpshopsLogo {
+      margin-left: 75px;
+    }
+    .sidebarIconToggle {
+      left: 37px;
+    }
+    .login {
+      margin-right: 37px;
     }
   }
   
   @media only screen and (max-width: 1200px) {
     .search {
       width: 500px;
-      /* padding: 14px 20px; */
-      margin-left: -180px;
+      margin-left: 10px;
+    }
+    .bpshopsLogo {
+      margin-left: 75px;
+    }
+    .sidebarIconToggle {
+      left: 37px;
+    }
+    .login {
+      margin-right: 37px;
     }
   }
   
   @media only screen and (max-width: 1100px) {
     .search {
       width: 450px;
-      /* padding: 13px 20px; */
-      margin-left: -180px;
+      margin-left: 0px;
+    }
+    .bpshopsLogo {
+      margin-left: 75px;
+    }
+    .sidebarIconToggle {
+      left: 37px;
+    }
+    .login {
+      margin-right: 37px;
     }
   }
   
   @media only screen and (max-width: 1000px) {
     .search {
-      width: 400px;
-      /* padding: 15px 20px; */
-      margin-left: -160px;
+      width: 410px;
+      margin-left: 0px;
+    }
+    .bpshopsLogo {
+      margin-left: 75px;
+    }
+    .sidebarIconToggle {
+      left: 37px;
+    }
+    .login {
+      margin-right: 37px;
     }
   }
   
   @media only screen and (max-width: 900px) {
     .search {
-      width: 370px;
-      /* padding: 14px 20px; */
-      margin-left: -130px;
+      width: 410px;
+      margin-left: 20px;
     }
     .bpshopsLogo {
-      margin-left: 60px;
-      
+      display: none;
+    }
+    .bpshopsIcon {
+      display: block;
+      width: 45px;
+      margin-left: 75px;
+    }
+    .sidebarIconToggle {
+      left: 37px;
+    }
+    .login {
+      margin-right: 37px;
     }
   }
   
   @media only screen and (max-width: 892px) {
     .search {
-      width: 350px;
-      /* padding: 14px 20px; */
-      margin-left: -100px;
+      width: 390px;
+      margin-left: 17px;
     }
 
     .bpshopsLogo {
-      margin-left: 60px;
-      
+      display: none;
+    }
+    .bpshopsIcon {
+      display: block;
+      width: 45px;
+      margin-left: 75px;
+    }
+    .sidebarIconToggle {
+      left: 37px;
+    }
+    .login {
+      margin-right: 37px;
     }
   }
   
   @media only screen and (max-width: 800px) {
     .search {
-      width: 320px;
-      /* padding: 14px 20px; */
-      margin-left: -60px;
+      width: 370px;
+      margin-left: 15px;
     }
     .bpshopsLogo {
-      margin-left: 60px;
-      
+      display: none;
+    }
+    .bpshopsIcon {
+      display: block;
+      width: 45px;
+      margin-left: 75px;
+    }
+    .sidebarIconToggle {
+      left: 37px;
+    }
+    .login {
+      margin-right: 37px;
     }
   }
   
   @media only screen and (max-width: 768px) {
     .search {
-      width: 300px;
-      /* padding: 14px 20px; */
-      margin-left: -30px;
+      width: 350px;
+      margin-left: 10px;
       
     }
     .sidebarIconToggle {
       top: 32px;
+      left: 37px;
     }
     .bpshopsLogo {
       display: none;
       
     }
-  
     .bpshopsIcon {
       display: block;
       width: 45px;
-      margin-left: 60px;
+      margin-left: 75px;
     }
   
     .login h6 {
@@ -272,18 +341,22 @@
   
     .threeDotMenuIcon {
       display: block;
+    }
+    .login {
+      margin-right: 37px;
     }
   }
   
   @media only screen and (max-width: 668px) {
     .search {
-      width: 270px;
+      width: 300px;
       padding: 14px 20px;
-      margin-left: -20px;
+      margin-left: -10px;
       font-size: 16px;
     }
     .sidebarIconToggle {
       top: 32px;
+      left: 37px;
     }
     .bpshopsLogo {
       display: none;
@@ -292,7 +365,7 @@
     .bpshopsIcon {
       display: block;
       width: 45px;
-      margin-left: 60px;
+      margin-left: 75px;
     }
   
     .login h6 {
@@ -301,6 +374,9 @@
   
     .threeDotMenuIcon {
       display: block;
+    }
+    .login {
+      margin-right: 37px;
     }
   }
   
@@ -308,12 +384,13 @@
     .search {
       width: 250px;
       padding: 14px 20px;
-      margin-left: -10px;
+      margin-left: 0px;
       font-size: 15px;
     }
 
     .sidebarIconToggle {
       top: 32px;
+      left: 30px;
     }
   
     .bpshopsLogo {
@@ -323,7 +400,7 @@
     .bpshopsIcon {
       display: block;
       width: 45px;
-      margin-left: 60px;
+      margin-left: 65px;
     }
   
     .login h6 {
@@ -333,6 +410,8 @@
     .threeDotMenuIcon {
       display: block;
     }
-
+    .login {
+      margin-right: 25px;
+    }
     
   }
